# fb

./: INSTALL.md  README-fb.md  README.md  fb-dashboard.service  pyproject.toml
src/fb/: __init__.py  agent_protocol.py  agent_registry.py  app.py  app_new.py  app_old.py  backup_engine.py  backup_orchestrator.py  cli.py  config.py  db.py  http_client.py  metadata.py  notifications.py  paths.py  remote.py  restore.py  retention.py  rsync.py  schedule.py  security.py  sites.py  telegram_notifier.py  utils.py  verify.py
src/fb/templates/: add_agent.html  agent.html  agent_detail.html  agents_list.html  audit_logs.html  backups.html  backups_list.html  base.html  error.html  index.html  login.html  settings.html  settings_page.html  site_detail.html  sites_list.html
