[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fb"
description = "Frappe Backup (fb) - enterprise-grade pull-based backups for Frappe/ERPNext over SSH + rsync"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "fb contributors"},
]
keywords = ["frappe", "erpnext", "backup", "ssh", "rsync", "cli", "devops"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Archiving :: Backup",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "tomli>=2.0.1; python_version<'3.11'",
]
dynamic = ["version"]

[project.scripts]
fb = "fb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "fb.__init__.__version__"}


