[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "fb"
version = "0.1.0"
description = "Frappe Manager Backup Dashboard (fb)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Frappe Manager Backup" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "apscheduler>=3.10.4",
  "httpx>=0.27.0",
  "itsdangerous>=2.1.0",
]

[project.scripts]
fb = "fb.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fb"]


